usuniete ukrainskie znaki

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,10 @@
     "import re\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from unidecode import unidecode"
+    "from unidecode import unidecode\n",
+    "import nltk\n",
+    "from nltk.corpus import words\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
@@ -23,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +93,7 @@
        "4      2  [PL/EN]           Piękne, stylowe i wysmakowan..."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +181,7 @@
        "4      4      2  [PL/EN]           Piękne, stylowe i wysmakowan..."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +206,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +233,7 @@
        "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul. bruzdowej 100d. mieszkanie gotowe do wynajęcia, dostępne od zaraz, częściowo umeblowane (kuchnia, łazienka i przedpokój). wygodne, przestronne, w sypialni duża szafa, ogródek około 40 m2. sypialnia o powierzchni 15 m2 z dużymi oknami i roletami. do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie -1 w cenie 350 zł. komunikacja autobusowa przy placu vogla i ulicy sytej, tam też znajduje się mini galeria, lidl, biedronka, restauracje, punkty usługowe, miejsca spotkań. osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego, tuż za wałem jest wisła, dużo zieleni, miejsc do spacerów, trasa rowerowa, wiślańskie plaże. podana cena jest bez czynszu administracyjnego, który wynosi 950 zł. wymagany najem okazjonalny. zapraszam zobacz wirtualny spacer: https://panoramy.galactica.pl/virgo/423768pośrednik odpowiedzialny zawodowo za wykonanie umowy pośrednictwa:  (licencja nr: 24900)'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,12 +247,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Usunięcie ukraińskich znaków"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n2 wolnostojących domy na działce 1700 m.kw. ul. Beskidzka Rzeszów - 21 pokój mieszkalny, umeblowany, magazyn, Dwa garaży (30 m.kw i 40 m.kw). Idealna nieruchomość dla firmy , usług, mieszkania dla pracowników. Stan bardzo dobry, wyposażony. Dodatkowa informacja - dzwonić jest możliwość wynajmu osobno każdego budynku\\n2     1700 .. . Beskidzka Rzeszów - 21  , , ,   (30 .   40 . ).    , ,   .   , .   -     \\n'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ukrainian_desc = '''\n",
+    "2 wolnostojących domy na działce 1700 m.kw. ul. Beskidzka Rzeszów - 21 pokój mieszkalny, umeblowany, magazyn, Dwa garaży (30 m.kw i 40 m.kw). Idealna nieruchomość dla firmy , usług, mieszkania dla pracowników. Stan bardzo dobry, wyposażony. Dodatkowa informacja - dzwonić jest możliwość wynajmu osobno każdego budynku\n",
+    "2 окремих будинки на ділянці 1700 кв.м. вул. Beskidzka Rzeszów - 21 житлова кімната, мебльована, склад, два гаражі (30 кв. м та 40 кв. м). Ідеальна нерухомість під компанію, послуги, житло для співробітників. Дуже хороший стан, укомплектований. Додаткова інформація - можлива оренда кожної будівлі окремо\n",
+    "'''\n",
+    "\n",
+    "def remove_ukrainian_characters(text):\n",
+    "    \n",
+    "    pattern = \"[а-яА-ЯіІїЇєЄ]+\"\n",
+    "    return re.sub(pattern, \"\", text)\n",
+    "\n",
+    "remove_ukrainian_characters(ukrainian_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Opis\"] = df[\"Opis\"].apply(remove_ukrainian_characters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Usunięcie linków, znaków specjalnych, interpunkcji oraz liczb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +307,7 @@
        "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul bruzdowej 100d mieszkanie gotowe do wynajęcia dostępne od zaraz częściowo umeblowane kuchnia łazienka i przedpokój wygodne przestronne w sypialni duża szafa ogródek około 40 m2 sypialnia o powierzchni 15 m2 z dużymi oknami i roletami do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie 1 w cenie 350 zł komunikacja autobusowa przy placu vogla i ulicy sytej tam też znajduje się mini galeria lidl biedronka restauracje punkty usługowe miejsca spotkań osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego tuż za wałem jest wisła dużo zieleni miejsc do spacerów trasa rowerowa wiślańskie plaże podana cena jest bez czynszu administracyjnego który wynosi 950 zł wymagany najem okazjonalny zapraszam zobacz wirtualny spacer  odpowiedzialny zawodowo za wykonanie umowy pośrednictwa  licencja nr 24900'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +346,7 @@
        "'wynająć mieszkanie dwupokojowy ogródek garaż wilanowa zawada ulica bruzdowy 100d mieszkanie gotowy wynająć dostępny zaraz częściowo umeblować kuchnia łazienka przedpokój wygodny przestronny sypialnia duży szafa ogródek 40 m2 sypialnia powierzchnia 15 imio2 duży okno rolet mieszkanie przynależeć miejsce parkingowy duży komórka lokatorsky poziom 1 cena 350 złoty komunikacja autobusowy plac vogla ulica syty znajdować mini galeria lidl biedronka restauracja punkt usługowy miejsce spotkanie osiedle zamknięty wyjście wyjazd wał zawadowskiy tuż wał wisły zieleń miejsce spacer trasa rowerowy wiślański plaża podać cena czynsz administracyjny wynosić 950 złoty wymagać najem okazjonalny zapraszać zobaczyć wirtualny spacer   odpowiedzialny zawodowo wykonać umowa pośrednictwo   licencja numer 24900'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
