--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -313,13 +313,18 @@
     }
    ],
    "source": [
+    "from string import digits\n",
+    "\n",
     "def remove_special_chars(text):\n",
     "    if text is not None:\n",
-    "        text = re.sub(r\"http\\S+\", \"\", text)\n",
+    "        text = text.replace('www','https://www')\n",
+    "        text = re.sub(r'(https|http)?:\\/\\/(\\w|\\.|\\/|\\?|\\=|\\&|\\%)*\\b', '', text, flags=re.MULTILINE)\n",
     "        cleaned_text = re.sub(r\"[^\\w\\s]\", \"\", text)\n",
+    "        cleaned_text = ''.join(filter(lambda x: not x.isdigit(), cleaned_text))\n",
     "        return cleaned_text\n",
     "    else:\n",
     "        return None\n",
+    "    \n",
     "\n",
     "\n",
     "df[\"Opis\"] = df[\"Opis\"].str.replace(\"\\d+\", \"\")\n",
