zaktualizowano one_sample_predict

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "4      2  [PL/EN]           Piękne, stylowe i wysmakowan..."
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4      4      2  [PL/EN]           Piękne, stylowe i wysmakowan..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul. bruzdowej 100d. mieszkanie gotowe do wynajęcia, dostępne od zaraz, częściowo umeblowane (kuchnia, łazienka i przedpokój). wygodne, przestronne, w sypialni duża szafa, ogródek około 40 m2. sypialnia o powierzchni 15 m2 z dużymi oknami i roletami. do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie -1 w cenie 350 zł. komunikacja autobusowa przy placu vogla i ulicy sytej, tam też znajduje się mini galeria, lidl, biedronka, restauracje, punkty usługowe, miejsca spotkań. osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego, tuż za wałem jest wisła, dużo zieleni, miejsc do spacerów, trasa rowerowa, wiślańskie plaże. podana cena jest bez czynszu administracyjnego, który wynosi 950 zł. wymagany najem okazjonalny. zapraszam zobacz wirtualny spacer: https://panoramy.galactica.pl/virgo/423768pośrednik odpowiedzialny zawodowo za wykonanie umowy pośrednictwa:  (licencja nr: 24900)'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "'\\n2 wolnostojących domy na działce 1700 m.kw. ul. Beskidzka Rzeszów - 21 pokój mieszkalny, umeblowany, magazyn, Dwa garaży (30 m.kw i 40 m.kw). Idealna nieruchomość dla firmy , usług, mieszkania dla pracowników. Stan bardzo dobry, wyposażony. Dodatkowa informacja - dzwonić jest możliwość wynajmu osobno każdego budynku\\n2     1700 .. . Beskidzka Rzeszów - 21  , , ,   (30 .   40 . ).    , ,   .   , .   -     \\n'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul bruzdowej d mieszkanie gotowe do wynajęcia dostępne od zaraz częściowo umeblowane kuchnia łazienka i przedpokój wygodne przestronne w sypialni duża szafa ogródek około  m sypialnia o powierzchni  m z dużymi oknami i roletami do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie  w cenie  zł komunikacja autobusowa przy placu vogla i ulicy sytej tam też znajduje się mini galeria lidl biedronka restauracje punkty usługowe miejsca spotkań osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego tuż za wałem jest wisła dużo zieleni miejsc do spacerów trasa rowerowa wiślańskie plaże podana cena jest bez czynszu administracyjnego który wynosi  zł wymagany najem okazjonalny zapraszam zobacz wirtualny spacer  odpowiedzialny zawodowo za wykonanie umowy pośrednictwa  licencja nr '"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,8 +323,6 @@
     "        return None\n",
     "    \n",
     "\n",
-    "\n",
-    "df[\"Opis\"] = df[\"Opis\"].str.replace(\"\\d+\", \"\")\n",
     "df[\"Opis\"] = df[\"Opis\"].apply(remove_special_chars)\n",
     "\n",
     "df[\"Opis\"][0]"
@@ -339,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +346,7 @@
        "'wynająć mieszkanie dwupokojowy ogródek garaż wilanowa zawada ulica bruzdowy d mieszkanie gotowy wynająć dostępny zaraz częściowo umeblować kuchnia łazienka przedpokój wygodny przestronny sypialnia duży szafa ogródek   metr sypialnia powierzchnia   metr duży okno rolet mieszkanie przynależeć miejsce parkingowy duży komórka lokatorsky poziom   cena   złoty komunikacja autobusowy plac vogla ulica syty znajdować mini galeria lidl biedronka restauracja punkt usługowy miejsce spotkanie osiedle zamknięty wyjście wyjazd wał zawadowskiy tuż wał wisły zieleń miejsce spacer trasa rowerowy wiślański plaża podać cena czynsz administracyjny wynosić   złoty wymagać najem okazjonalny zapraszać zobaczyć wirtualny spacer   odpowiedzialny zawodowo wykonać umowa pośrednictwo   licencja numer'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,11 +1150,10 @@
     "    _ = tfidf.fit_transform(train_data)\n",
     "    classes = [\"nieumeblowane\", \"umeblowane\", \"częściowo umeblowane\"]\n",
     "    text = text.lower()\n",
-    "    cleaned_text = re.sub(\"\\d+\", \"\", text)\n",
-    "    cleaned_text = re.sub(r\"http\\S+\", \"\", cleaned_text)\n",
-    "    cleaned_text = re.sub(r\"[^\\w\\s]\", \"\", cleaned_text)\n",
+    "    cleaned_text = remove_ukrainian_characters(text)\n",
+    "    cleaned_text = remove_special_chars(cleaned_text)\n",
     "\n",
-    "    doc = nlp(cleaned_text)\n",
+    "    doc = nlp_pl(cleaned_text)\n",
     "    cleaned_text = \" \".join([token.lemma_ for token in doc if not token.is_stop])\n",
     "\n",
     "    cleaned_text = re.sub(r\"\\b\\w\\b\\s*\", \"\", cleaned_text)\n",
@@ -1168,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1174,7 @@
        "'częściowo umeblowane'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
